--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -33,7 +33,7 @@ html, body{
     justify-content: center;
     background-position: center;
     background-repeat: no-repeat;
-    background-image: url("/assets/img/fondo.jpg");
+    background-image: url("https://github.com/Jesus-Medina/Condicionales/blob/main/assets/img/fondo.jpg?raw=true");
 
 }
 
