--- a/assets/css/style_2.css
+++ b/assets/css/style_2.css
@@ -32,7 +32,7 @@ html, body{
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
-    background-image: url("/assets/img/fondo2.jpg");
+    background-image: url("https://github.com/Jesus-Medina/Condicionales/blob/main/assets/img/fondo2.jpg?raw=true");
 }
 
 .container-flex {
