--- a/assets/css/style_3.css
+++ b/assets/css/style_3.css
@@ -20,7 +20,7 @@ html, body{
 
 .container-flex {
     height: 100%;
-    background-image: url("/assets/img/fondo3.jpg");
+    background-image: url("https://github.com/Jesus-Medina/Condicionales/blob/main/assets/img/fondo3.jpg?raw=true");
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
