--- a/assets/css/style_3.css
+++ b/assets/css/style_3.css
@@ -50,6 +50,7 @@ html, body{
 .container-flex .container__codigo p {
     color: white;
     margin: 4rem;
+    text-align: center;
 }
 
 .container__opciones {
